Modify OTC_JobList to use a builtin list implementation rather than generic OTC_LinkList implementation in attempt to speed up job dispatching.

--- a/changes.txt
+++ b/changes.txt
@@ -4,13 +4,12 @@ Changes In OSE 8.2
 Improvements
 ------------
 
-- Avoid redundant memory allocations and string copying when performing
-  the lookup of the receiver of an event. That is, where an agent has an
-  instance of OTC_Receiver bound to it and the event is being delivered
-  using the name of the receiver. This mechanism underlays the whole
-  OTC_Envelope event delivery system and the higher level messaging
-  framework so improvements here will positively affect these higher
-  level layers.
+- Minor improvements in the performance of the job dispatcher and event
+  delivery system where receiver names are used as the target, by way of
+  avoiding redundant memory allocations and string copying where possible.
+  This mechanism underlays the whole OTC_Envelope event delivery system and
+  the higher level messaging framework so improvements here may positively
+  affect these higher level layers.
 
 New Features
 ------------
