Fix to how Python complex type decoded in Python wrappers.

--- a/changes.txt
+++ b/changes.txt
@@ -1,6 +1,12 @@
 Changes In OSE 8.2
 ==================
 
+Bug Fixes
+---------
+
+- Fix in Python wrappers whereby the Python complex data type was not
+  being decoded correctly.
+
 Improvements
 ------------
 
