--- a/changes.txt
+++ b/changes.txt
@@ -7,6 +7,12 @@ Bug Fixes
 - Fix in Python wrappers whereby the Python complex data type was not
   being decoded correctly.
 
+- Fix potential ordering issue with active/inactive events related to
+  socket connections. In a heavily loaded application, an active event
+  for a socket could get processed before the inactive event for the prior
+  socket connection from the same client. This could possibly have had
+  adverse impacts on the higher level messaging framework.
+
 Improvements
 ------------
 
